--- a/components/commerce/product.jade
+++ b/components/commerce/product.jade
@@ -366,7 +366,7 @@ template(name='shop_info')
                             |description analysis
                             i.dropdown.icon
                     .content
-                        +watson_view
+                        //- +watson_view
             
 template(name='product_viewing')
     .ui.secondary.segment
