--- a/client/home.jade
+++ b/client/home.jade
@@ -14,7 +14,13 @@ template(name='home')
                 +stats_small
             .four.wide.column
                 div
-                .ui.inline.grey.header
+                .ui.grey.header
+                    |offers
+                .ui.grey.header
+                    |for sale
+                .ui.grey.header
+                    |rentals
+                .ui.grey.header
                     |polls
                 .mediumscroll
                     each polls
