--- a/components/commerce/product.jade
+++ b/components/commerce/product.jade
@@ -1,14 +1,15 @@
 template(name='shop_edit')
     with current_doc
         .ui.stackable.padded.grid
-            .three.column.row
-                .column
+            .row
+                .four.wide.column
                     .ui.inline.header #{title}
-                    a.ui.large.basic.icon.button(href="/shop/#{_id}/view")
-                        i.big.green.checkmark.icon
-                    .ui.basic.icon.button.delete_shop_item
-                        i.red.remove.icon
+                    a.ui.big.basic.button(href="/shop/#{_id}/view") save
+                    .ui.basic.icon.button.delete_shop_item 
+                        i.trash.icon
                     +text_edit key='title' icon='header' direct=true
+                    +image_edit key='picture' direct=true
+        
                     +array_edit key='tags' icon='tags' direct=true
                     +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                     +text_edit key='delivery_instructions' icon='truck' label='delivery instructions' direct=true
@@ -21,7 +22,6 @@ template(name='shop_edit')
                     //- +omega_edit model='shop_type'
                     if is_event
                         .ui.header 
-                            i.calendar.icon
                             |event
                         +date_edit key='date' label='date' direct=true
                         +time_edit key='start_time' label='start time' direct=true
@@ -33,7 +33,7 @@ template(name='shop_edit')
                         .ui.header product
                         +boolean_edit key='for_sale' label='for sale' direct=true
                         if for_sale
-                            +dollar_price_edit key='dollar_price' icon='money' label='dollar price' direct=true
+                            +number_edit key='dollar_price' icon='money' label='dollar price' direct=true
                         +boolean_edit key='rentable' direct=true
                         unless rentable
                             +boolean_edit key='food' direct=true
@@ -43,19 +43,17 @@ template(name='shop_edit')
                         if rentable
                             +number_edit key='hourly_rate' label='hourly rate' icon='time-span' direct=true
                             +number_edit key='daily_rate' label='daily rate' icon='timetable' direct=true
-                .column
-                    +image_edit key='picture' direct=true
+                .eight.wide.column
                     +html_edit key='description' direct=true
-                .column
+                    +text_edit key='model' direct=true
+                .four.wide.column
                     .ui.header
-                        i.truck.grey.icon
                         |delivery
                     +boolean_edit key='pickup_delivery' label='pickup' direct=true
                     +boolean_edit key='home_dropoff_delivery' label='home dropoff' direct=true
                     +boolean_edit key='building_dropoff_delivery' label='building dropoff' direct=true
                     +boolean_edit key='healthclub_drop_off_delivery' label='health club drop off' direct=true
                     .ui.header 
-                        i.money.grey.icon
                         |pricing
                     +boolean_edit key='cash_accepted' label='cash accepted' direct=true
                     +boolean_edit key='prepay' label='prepayment required' direct=true
@@ -66,22 +64,19 @@ template(name='shop_edit')
                     if friend_discount
                         +number_edit key='security_deposit_amount' label='security deposit amount' icon='dollar'
                     .ui.header
-                        i.grey.eye.icon
                         | visibility
                     +boolean_edit key='published' label='published' direct=true
-                    .ui.divider
-                    +boolean_edit key='visible_to_friends' label='visible to friends' direct=true
-                    +boolean_edit key='visible_to_building' label='visible to building' direct=true
-                    +boolean_edit key='visible_to_residents' label='visible to residents' direct=true
-                    +boolean_edit key='visible_to_public' label='visible to public' direct=true
+                    .ui.header visibility
+                    +boolean_edit key='visible_to_friends' label='friends' direct=true
+                    +boolean_edit key='visible_to_building' label='building' direct=true
+                    +boolean_edit key='visible_to_residents' label='residents' direct=true
+                    +boolean_edit key='visible_to_public' label='public' direct=true
                         
                 
 
 template(name='shop_view_layout')
     +nav
     //- a.ui.large.button(href="/m/shop")
-    //-     i.chevron.left.icon
-    //-     i.shop.icon
     //-     | Shop
     with current_doc
         .ui.stackable.padded.grid
@@ -93,37 +88,27 @@ template(name='shop_view_layout')
                     .ui.large.header #{title}
                     if can_edit
                         a.ui.fluid.button(href="/shop/#{_id}/edit")
-                            i.cog.grey.icon
                             |edit
                     .ui.large.vertical.fluid.menu
                         a.item(href="/shop/#{_id}/info" class="{{isActiveRoute 'shop_info'}}")
                             |info
-                            i.info.grey.icon
                         if rentable
                             a.item(href="/shop/#{_id}/rentals" class="{{isActiveRoute 'shop_rentals'}}")
                                 |rentals
-                                i.clock.grey.icon
                         a.item(href="/shop/#{_id}/chat" class="{{isActiveRoute 'shop_chat'}}")
                             |chat
-                            i.chat.grey.icon
                         a.item(href="/shop/#{_id}/tasks" class="{{isActiveRoute 'shop_tasks'}}")
                             |tasks
-                            i.tasks.grey.icon
                         a.item(href="/shop/#{_id}/earnings" class="{{isActiveRoute 'shop_earnings'}}")
                             |earnings
-                            i.money.grey.icon
                         a.item(href="/shop/#{_id}/stats" class="{{isActiveRoute 'shop_stats'}}")
                             |stats
-                            i.line.chart.grey.icon
                         a.item(href="/shop/#{_id}/ownership" class="{{isActiveRoute 'product_ownership'}}")
                             |ownership
-                            i.pie.chart.grey.icon
                         a.item(href="/shop/#{_id}/projections" class="{{isActiveRoute 'shop_projections'}}")
                             |projections
-                            i.line.chart.grey.icon
                         a.item(href="/shop/#{_id}/ads" class="{{isActiveRoute 'shop_ads'}}")
                             |ads
-                            i.bullhorn.grey.icon
                     .ui.header added by #{_author_username}
                     |#{when}
                     with _author_id
@@ -140,7 +125,6 @@ template(name='shop_view_layout')
                         +time_view key='time_available' label='time available' icon='clock' direct=true
                     +product_adspace
                     .ui.header 
-                        i.star.icon
                         |reviews
                 .eight.wide.column
                     +yield
@@ -155,46 +139,40 @@ template(name='shop_view_layout')
                     if for_sale
                         unless sold_out
                             .ui.big.green.fluid.button.add_to_cart 
-                                i.cart.plus.icon
                                 |+ cart
                         else 
                             .ui.big.disabled.button
-                                i.ban.icon
                                 |sold out
-                    .scrolling
-                        +voting_full     
-                        .ui.basic.segment
-                            .ui.small.header
-                                i.grey.truck.icon
-                                |delivery instructions
-                            |#{delivery_instructions}      
-                        .ui.header
-                            i.truck.icon
-                            |delivery
-                        +boolean_view key='pickup_delivery' label='pickup' direct=true
-                        +boolean_view key='home_dropoff_delivery' label='home dropoff' direct=true
-                        +boolean_view key='building_dropoff_delivery' label='building dropoff' direct=true
-                        +boolean_view key='healthclub_drop_off_delivery' label='health club drop off' direct=true
-                        .ui.header pricing
-                        +boolean_view key='cash_accepted' label='cash accepted' direct=true
-                        +boolean_view key='prepay' label='prepayment required' direct=true
-                        +boolean_view key='security_deposit_required' label='security deposit required' direct=true
-                        if security_deposit_required
-                            +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
-                        .ui.header pricing planning determination
-                        +boolean_view key='friend_discount' label='friend discount' direct=true
-                        if friend_discount
-                            +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
-                        .ui.header
-                            i.grey.eye.icon
-                            | privacy
-                        .ui.small.header visibility
-                        +boolean_view key='visible_to_friends' label='visible to friends' direct=true
-                        +boolean_view key='visible_to_building' label='visible to building' direct=true
-                        +boolean_view key='visible_to_residents' label='visible to residents' direct=true
-                        +boolean_view key='visible_to_public' label='visible to public' direct=true
-                        .ui.divider
-                        +boolean_view key='published' label='published' direct=true
+                    +voting_full     
+                    .ui.basic.segment
+                        .ui.small.header
+                            |delivery instructions
+                        |#{delivery_instructions}      
+                    .ui.header
+                        |delivery
+                    +boolean_view key='pickup_delivery' label='pickup' direct=true
+                    +boolean_view key='home_dropoff_delivery' label='home dropoff' direct=true
+                    +boolean_view key='building_dropoff_delivery' label='building dropoff' direct=true
+                    +boolean_view key='healthclub_drop_off_delivery' label='health club drop off' direct=true
+                    .ui.header pricing
+                    +boolean_view key='cash_accepted' label='cash accepted' direct=true
+                    +boolean_view key='prepay' label='prepayment required' direct=true
+                    +boolean_view key='security_deposit_required' label='security deposit required' direct=true
+                    if security_deposit_required
+                        +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
+                    .ui.header pricing planning determination
+                    +boolean_view key='friend_discount' label='friend discount' direct=true
+                    if friend_discount
+                        +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
+                    .ui.header
+                        | privacy
+                    .ui.small.header visibility
+                    +boolean_view key='visible_to_friends' label='friends' direct=true
+                    +boolean_view key='visible_to_building' label='building' direct=true
+                    +boolean_view key='visible_to_residents' label='residents' direct=true
+                    +boolean_view key='visible_to_public' label='public' direct=true
+                    .ui.divider
+                    +boolean_view key='published' label='published' direct=true
     +footer
     
     
@@ -244,7 +222,6 @@ template(name='shop_stats')
     
 template(name='product_location')
     .ui.inline.header current location
-    i.refresh.link.icon.recheck_location
     |#{current_location}
     
     
@@ -255,23 +232,17 @@ template(name='shop_rentals')
                         
 template(name='shop_earnings')
     .ui.header 
-        i.line.chart.icon
         |shop earnings
     .ui.segment
         .ui.small.header 
-            i.clock.grey.icon
             |past reservations #{past_reservations}
         .ui.small.header 
-            i.clock.grey.icon
             |future reservations #{future_reservations}
         .ui.small.header 
-            i.money.grey.icon
             |past earnings $#{past_earnings}
         .ui.small.header 
-            i.money.grey.icon
             |future earnings $#{future_earnings}
-        .ui.grey.icon.button.calculate_future_earnings 
-            i.refresh.grey.icon
+        .ui.grey.button.calculate_future_earnings 
             //- calculate future earnings
     .ui.segment
         .ui.small.header total earnings
@@ -288,7 +259,6 @@ template(name='shop_chat')
                     
 template(name='product_ownership')                        
     .ui.header 
-        i.hand.holding.usd.icon
         |product ownership
     .ui.button.sell_shares sell shares
     .ui.button.recalculate_ownership recalculate ownership
@@ -322,24 +292,16 @@ template(name='shop_projections')
                     
 template(name='shop_tasks')                        
     .ui.header
-        i.tasks.icon
         | product tasks
-    i.green.checkmark.icon
     |none
     .ui.header
-        i.envelope.icon
         | unreplied messages
-    i.green.checkmark.icon
     |none
     .ui.header
-        i.clipboard.icon
         | undelivered orders
-    i.green.checkmark.icon
     |none
     .ui.header
-        i.ticket.icon
         | open tickets
-    i.green.checkmark.icon
     |none
                     
 template(name='shop_info')    
@@ -364,22 +326,18 @@ template(name='shop_info')
                         .ui.header 
                             +i name='development-skill'
                             |description analysis
-                            i.dropdown.icon
                     .content
                         //- +watson_view
             
 template(name='product_viewing')
     .ui.secondary.segment
         .ui.header
-            i.eye.icon
             | viewers
         if marked_read
             .ui.button.mark_unread 
-                i.eye.icon
                 |mark unread
         else
             .ui.button.mark_read
-                i.hidden.icon
                 | mark read
         div
         .ui.header reader count #{reader_count}
@@ -393,7 +351,6 @@ template(name='shop_item_transactions')
         .ui.header shop item transactions
         if is_author
             .ui.big.button 
-                i.checkmark.icon
                 |mark as sold
         
 
@@ -406,7 +363,6 @@ template(name='product_transactions')
         |transactions
     if is_author
         .ui.big.button.add_transaction
-            i.plus.icon
             | add transaction
     .ui.styled.accordion
         each product_transactions
