--- a/client/client.jade
+++ b/client/client.jade
@@ -16,7 +16,7 @@ head
     //- link(rel="stylesheet" href="http://cdn.dhtmlx.com/edge/dhtmlx.css" type="text/css") 
     script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js')
     script(src='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js')
-    script(src='tablesort.js')
+    //- /* script(src='tablesort.js') */
     script(src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js")
     //- /* script(src='https://cdn.jsdelivr.net/jsbarcode/3.6.0/JsBarcode.all.min.js') */
 
