--- a/components/commerce/rental.jade
+++ b/components/commerce/rental.jade
@@ -1,3 +1,44 @@
+template(name='rental_card_template')
+    .ui.fluid.segment.grid
+        .row
+            .sixteen.wide.column
+                a.ui.inline.header(href="/service/#{_id}/view") #{title} 
+                    if variable_price
+                        |~
+                    |$#{hourly_rate}/hr
+        .row
+            .four.wide.column
+                a(href="/service/#{_id}/view")
+                    +image_view key='image' label='image' direct=true
+            .twelve.wide.column
+                div
+                i.grey.marker.icon
+                //- .ui.grey.inline.header location
+                each location_tags
+                    .ui.label #{this}
+                div
+                i.grey.tags.icon
+                //- .ui.grey.inline.header tags
+                each tags
+                    .ui.label #{this}
+                +single_user_view key='resident' label='resident' direct=true
+                div
+                +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
+    
+                +voting
+                div
+                if currentUser
+                    if can_edit
+                        a.ui.button(href="/service/#{_id}/edit")
+                            i.pencil.icon
+                            |edit
+                a.ui.button(href="/service/#{_id}/view")
+                    |view
+                    i.right.chevron.icon
+                +author_info
+
+
+
 template(name='rentals')
     .ui.header 
         i.clock.icon
