--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -107,10 +107,10 @@ template(name='delta')
                                 //- .column
                                 +delta_result
                     //- +Template.dynamic template=view_mode_template
-            .row 
-                .sixteen.wide.column
-                    if model_stats_exists
-                        +Template.dynamic template=model_stats
+            //- .row 
+            //-     .sixteen.wide.column
+            //-         if model_stats_exists
+            //-             +Template.dynamic template=model_stats
     
                     //- .ui.header calculations
                     //- .ui.button rerun calculations
